Optimize the code. Nullable lyrics entry for data inserted into Lyrics database.